// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`activity/ActivityItem ActivityChannelPackageUpdated smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-8 css-roeqa8-MuiListItem-root">
  <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
    <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
      <div class="MuiBox-root css-geek62">
        <div class="MuiBox-root css-12z0wuy">
          <svg xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
               aria-hidden="true"
               role="img"
               width="30px"
               height="30px"
               viewbox="0 0 24 24"
               style="color: rgb(0, 211, 255);"
          >
            <path fill="currentColor"
                  d="M11 15h2v2h-2v-2m0-8h2v6h-2V7m1-5C6.47 2 2 6.5 2 12a10 10 0 0 0 10 10a10 10 0 0 0 10-10A10 10 0 0 0 12 2m0 18a8 8 0 0 1-8-8a8 8 0 0 1 8-8a8 8 0 0 1 8 8a8 8 0 0 1-8 8Z"
            >
            </path>
          </svg>
        </div>
        <div class="MuiBox-root css-0">
          <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-6 css-12h6qye-MuiTypography-root">
            some app
          </p>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
      <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-7 css-tis6ec-MuiTypography-root">
        02:56 PM
      </p>
    </div>
    <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
      A description
    </div>
  </div>
</li>
`;

exports[`activity/ActivityItem Warning smoke-test 1`] = `
<li class="MuiListItem-root MuiListItem-padding MuiListItem-alignItemsFlexStart stable-makeStyles-list-4 css-roeqa8-MuiListItem-root">
  <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row css-tqvfrr-MuiGrid-root">
    <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-10 css-r13beu-MuiGrid-root">
      <div class="MuiBox-root css-geek62">
        <div class="MuiBox-root css-12z0wuy">
          <svg xmlns="http://www.w3.org/2000/svg"
               xmlns:xlink="http://www.w3.org/1999/xlink"
               aria-hidden="true"
               role="img"
               width="30px"
               height="30px"
               viewbox="0 0 24 24"
               style="color: rgb(255, 85, 0);"
          >
            <path fill="currentColor"
                  d="M12 2L1 21h22M12 6l7.53 13H4.47M11 10v4h2v-4m-2 6v2h2v-2"
            >
            </path>
          </svg>
        </div>
        <div class="MuiBox-root css-0">
          <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-appName-2 css-12h6qye-MuiTypography-root">
            some app
          </p>
        </div>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-direction-xs-row MuiGrid-grid-xs-2 css-15bfe7d-MuiGrid-root">
      <p class="MuiTypography-root MuiTypography-body1 stable-makeStyles-time-3 css-tis6ec-MuiTypography-root">
        02:56 PM
      </p>
    </div>
    <div class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-row MuiGrid-grid-xs-12 MuiGrid-spacing-xs-2 css-1314ia1-MuiGrid-root">
      <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
        <p class="MuiTypography-root MuiTypography-body1 css-17imrw3-MuiTypography-root">
          GROUP
        </p>
      </div>
      <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
        <a class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineHover stable-makeStyles-groupLink-1 css-1tr280c-MuiTypography-root-MuiLink-root"
           href="/apps/XXXX-XXX/groups/YYYY-YYYY"
        >
          some group
        </a>
      </div>
    </div>
    <div class="MuiGrid-root MuiGrid-direction-xs-row css-17fpwt7-MuiGrid-root">
      A description
    </div>
  </div>
</li>
`;
